Code cleanup - dead code, warnings etc.